Added jolt physics to the project

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -18,17 +18,19 @@ file(GLOB_RECURSE ENGINE_SRC
 
 add_library(${ProjectName} STATIC ${ENGINE_SRC})
 
-add_dependencies(${ProjectName} enet flecs raylib)
+add_dependencies(${ProjectName} enet flecs raylib Jolt)
 
 target_include_directories( ${ProjectName}
     PUBLIC ${enet_SOURCE_DIR}/include
     PUBLIC ${flecs_SOURCE_DIR}/include
     PUBLIC ${raylib_BINARY_DIR}/raylib/include
     PUBLIC ${raygui_SRC}
+    PUBLIC ${JoltPhysics_SOURCE_DIR}/..
 )
 
 target_link_libraries(${ProjectName}
     PUBLIC flecs_static
     PUBLIC enet
     PUBLIC raylib
+    PUBLIC Jolt
 )
