Added compiler flags for release mode

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -18,6 +18,7 @@ file(GLOB_RECURSE ENGINE_SRC
 
 if(MSVC)
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MTd")
 endif()
 
 add_library(${ProjectName} STATIC ${ENGINE_SRC})
