--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -19,6 +19,7 @@ file(GLOB_RECURSE ENGINE_SRC
 if(MSVC)
     set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
     set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MTd")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MTd")
 endif()
 
 add_library(${ProjectName} STATIC ${ENGINE_SRC})
