--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -17,6 +17,8 @@ file(GLOB_RECURSE ENGINE_SRC
 )
 
 if(MSVC)
+    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MTd")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MTd")
 endif()
 
