--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -28,7 +28,7 @@ add_dependencies(${ProjectName} enet raylib Jolt)
 
 target_include_directories( ${ProjectName}
     PUBLIC ${enet_SOURCE_DIR}/include
-    PUBLIC ${entt_SOURCE_DIR}/single_include/entt
+    PUBLIC ${entt_SRC}/single_include
     PUBLIC ${raylib_BINARY_DIR}/raylib/include
     PUBLIC ${raygui_SRC}
     PUBLIC ${JoltPhysics_SOURCE_DIR}/..
