Linked lua and sol2

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -9,6 +9,7 @@ link_directories(
     ${enet_BINARY_DIR}
     ${flecs_BINARY_DIR}
     ${raylib_BINARY_DIR}/raylib
+    ${lua_BINARY_DIR}
 )
 
 file(GLOB_RECURSE ENGINE_SRC
@@ -18,18 +19,21 @@ file(GLOB_RECURSE ENGINE_SRC
 
 add_library(${ProjectName} STATIC ${ENGINE_SRC})
 
-add_dependencies(${ProjectName} enet raylib)
+add_dependencies(${ProjectName} enet raylib lua)
 
 target_include_directories( ${ProjectName}
     PUBLIC ${enet_SOURCE_DIR}/include
     PUBLIC ${entt_SRC}/single_include
     PUBLIC ${raylib_BINARY_DIR}/raylib/include
     PUBLIC ${raygui_SRC}
+    PUBLIC ${lua_SOURCE_DIR}
+    PUBLIC ${sol2_SOURCE_DIR}/include
     #PUBLIC ${JoltPhysics_SOURCE_DIR}/..
 )
 
 target_link_libraries(${ProjectName}
     PUBLIC enet
     PUBLIC raylib
+    PUBLIC lua
     #PUBLIC Jolt
 )
