Linked efsw and sqlite3

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -10,6 +10,8 @@ link_directories(
     ${flecs_BINARY_DIR}
     ${raylib_BINARY_DIR}/raylib
     ${lua_BINARY_DIR}
+    ${efsw_BINARY_DIR}
+    ${sqlite3_BINARY_DIR}
 )
 
 file(GLOB_RECURSE ENGINE_SRC
@@ -28,6 +30,8 @@ target_include_directories( ${ProjectName}
     PUBLIC ${raygui_SRC}
     PUBLIC ${lua_SOURCE_DIR}
     PUBLIC ${sol2_SOURCE_DIR}/include
+    PUBLIC ${efsw_SOURCE_DIR}/include
+    PUBLIC ${sqlite3_SOURCE_DIR}
     #PUBLIC ${JoltPhysics_SOURCE_DIR}/..
 )
 
@@ -35,5 +39,7 @@ target_link_libraries(${ProjectName}
     PUBLIC enet
     PUBLIC raylib
     PUBLIC lua
+    PUBLIC efsw
+    PUBLIC sqlite3
     #PUBLIC Jolt
 )
