Added run task for the runtime

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -26,6 +26,15 @@
                 "build",
             ],
             "group": "build",
+        },
+        {
+            "label": "run",
+            "type": "shell",
+            "command": "${cwd}\\build\\runtime\\runtime.exe",
+            "args": [
+                "${cwd}\\tests\\project",
+            ],
+            "group": "none",
         }
     ]
 }
