--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_subdirectory("vendor")
 set(CMAKE_FOLDER /)
 add_subdirectory("engine")
 add_subdirectory("runtime")
+add_subdirectory("editor")
 add_subdirectory("tests")
 
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT "runtime")
