--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -8,7 +8,6 @@ set(CMAKE_DEBUG_POSTFIX "")
 link_directories(
     ${enet_BINARY_DIR}
     ${flecs_BINARY_DIR}
-    ${raylib_BINARY_DIR}/raylib
     ${lua_BINARY_DIR}
     ${efsw_BINARY_DIR}
     ${sqlite3_BINARY_DIR}
@@ -21,13 +20,11 @@ file(GLOB_RECURSE ENGINE_SRC
 
 add_library(${ProjectName} STATIC ${ENGINE_SRC})
 
-add_dependencies(${ProjectName} enet raylib lua Jolt)
+add_dependencies(${ProjectName} enet lua Jolt)
 
 target_include_directories( ${ProjectName}
     PUBLIC ${enet_SOURCE_DIR}/include
     PUBLIC ${entt_SRC}/single_include
-    PUBLIC ${raylib_BINARY_DIR}/raylib/include
-    PUBLIC ${raygui_SRC}
     PUBLIC ${lua_SOURCE_DIR}
     PUBLIC ${sol2_SOURCE_DIR}/include
     PUBLIC ${efsw_SOURCE_DIR}/include
@@ -38,7 +35,6 @@ target_include_directories( ${ProjectName}
 
 target_link_libraries(${ProjectName}
     PUBLIC enet
-    PUBLIC raylib
     PUBLIC lua
     PUBLIC efsw
     PUBLIC sqlite3
